# GhostHandDesk

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-07-02.md  BUILD-PORTABLE.bat  CHANGELOG.md  CONTRIBUTING.md  CORRECTION-ORIGIN-CHECK.md  CORRECTIONS_APPLIED.md  LANCER-APPLICATION.bat  LAUNCH.md  Lancer-GhostHandDesk.bat  MIGRATION.md  NEXT_STEPS.md  PROJET-TERMINE.md  QUICKSTART_E2E.md  README.md  RELEASE_NOTES.md  SESSION_REPORT.md  VERIFIER-PREREQUIS.bat  ecosystem.config.js  server_port.txt
.github/workflows/: codeql.yml
GhostHandDesk-Portable/: CORRECTION-TLS.txt  DEMARRAGE-RAPIDE.txt  GUIDE-TEST-CONNEXION.txt  INSTRUCTIONS-TEST-COMPLET.txt  LANCER-GHOSTHANDDESK.bat  LANCER-INSTANCE1.bat  LANCER-INSTANCE2.bat  README.txt  TEST-AVEC-LOGS-DEBUG.txt  TEST-CONNEXION-P2P.txt  TEST-DEBUG.bat  TEST-SERVEUR.bat  test-message-format.rs
GhostHandDesk-Portable/certs/: cert.pem  key.pem
client/: Cargo.toml  FFMPEG_SETUP.md  TAURI_README.md  build.rs  package-lock.json  package.json  test_websocket.rs
client/GhostHandDesk-Portable/: README.txt  diagnostic.bat  lancer-avec-logs.bat
client/src/: adaptive_bitrate.rs  audit.rs  clipboard.rs  config.rs  crypto.rs  error.rs  file_transfer.rs  input_control.rs  lib.rs  main.rs  network.rs  protocol.rs  screen_capture.rs  storage.rs  streaming.rs  validation.rs  video_encoder.rs
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs  settings_commands.rs  storage_commands.rs
client/src/ui/: mod.rs
client/tests/: integration_connect_request.rs  integration_test.rs  security_tests.rs
client/ui/: index.html  package-lock.json  package.json  vite.config.ts
client/ui/src/: App.vue  main.ts
client/ui/src/components/: ChatPanel.vue  ConnectDialog.vue  ConnectionRequestDialog.vue  RemoteViewer.vue  SettingsPanel.vue
deploy/: deploy-vps.sh  nginx-ghd.conf
docs/: COMMENT-TESTER.txt  COMPLETION_SUMMARY.md  CORRECTIONS-FINALES.md  DEVELOPMENT.md  E2E_TESTING_GUIDE.md  E2E_TEST_RESULTS_TEMPLATE.md  IMPLEMENTATION_REPORT.md  PORTABLE-GUIDE.md  QUICKSTART.md  RAPPORT-CORRECTIONS.md  README_OLD.md  TODO.md
release/: README.txt
scripts/: 1-Compiler-Serveur.bat  1-SERVEUR.bat  1-lancer-serveur.bat  2-Compiler-Client.bat  2-INSTANCE.bat  2-lancer-application.bat  Compiler-Portable.bat  DEBUG.bat  DEMARRER.bat  Lancer-Serveur.bat  SIMPLE.bat  START.bat  check-prerequisites.ps1  debug-connexion.bat  generate-certs.bat  generate-certs.sh  lancer-app.bat  lancer-tout.bat  run-e2e-tests.ps1  tester-connexion.bat
server/: .env.example  BUILD.bat  README.md  go.mod
server/cmd/signaling/: main.go
server/internal/config/: config.go
server/internal/models/: message.go
server/internal/signaling/: handler.go  hub.go  validation.go  (+1 more)
web/: index.html
