[package]
name = "ghost_hand_client"
version = "0.1.0"
edition = "2021"
authors = ["GhostHandDesk Contributors"]
description = "Open-source remote desktop client"
license = "MIT OR Apache-2.0"

[lib]
name = "ghost_hand_client"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Screen capture - multiplatform
xcap = "0.0.13"  # Cross-platform screen capture

# Video encoding - using simple image encoding for now
image = "0.25"   # Image manipulation

# Networking
tokio-tungstenite = "0.24"  # WebSocket client
futures = "0.3"
webrtc = "0.9"               # WebRTC stack complète
async-std = "1.12"           # Helpers async pour WebRTC
bytes = "1.5"                # Manipulation de bytes pour data channels

# Input control (keyboard/mouse)
enigo = "0.2"  # Cross-platform input simulation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.17"      # Crypto primitives
base64 = "0.22"    # Base64 encoding for crypto

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# FFmpeg pour encodage H.264 (optionnel, désactivé par défaut)
ffmpeg-next = { version = "7.0", optional = true }

# Features
[features]
default = []
ffmpeg = ["ffmpeg-next"]    # Activer avec --features ffmpeg
hwaccel = []                # Accélération matérielle

# Platform-specific dependencies can be added later as needed
# [target.'cfg(windows)'.dependencies]
# [target.'cfg(target_os = "macos")'.dependencies]
# [target.'cfg(target_os = "linux")'.dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
