[package]
name = "ghosthanddesk-tauri"
version = "0.4.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.22"
xcap = "0.0.13"

# Modules du client principal
[dependencies.ghost_hand_client]
path = ".."
